--- a/web/src/scss/styles.scss
+++ b/web/src/scss/styles.scss
@@ -127,3 +127,12 @@ header > div {
 .winners .winners_list .winner .name span {
 	display: none;
 }
+
+
+.winners .ui-slider-handle {
+	position: absolute;
+	border: 3px solid lightblue;
+	width: 10px;
+	height: 10px;
+	margin-top: 2px;
+}
