--- a/web/src/scss/styles.scss
+++ b/web/src/scss/styles.scss
@@ -1,3 +1,7 @@
+a {
+	text-decoration:none;
+}
+
 .templates {
 	display: none;
 }
@@ -31,9 +35,9 @@ header > div {
 }
 
 .traces .timeline ul {
-	list-style: none;
 	margin: 0;
 	padding: 0;
+	list-style: none;
 }
 
 .traces .timeline li {
@@ -44,45 +48,45 @@ header > div {
 	width: 6px;
 	height: 6px;
 	border: 1px solid #ccc;
-	font-size: 6px;
 	text-indent: 100%;
+	font-size: 6px;
 }
 .traces .timeline li.trace {
 	background-color: #222;
 }
 
 .traces .timeline-zoom {
+	overflow-x: scroll;
+	overflow-y: hidden;
 	margin: 0;
 	padding: 0;
 	width: 900px;
 	height: 30px;
-	overflow-y: hidden;
-	overflow-x: scroll;
 }
 .traces .timeline-zoom ul {
 	margin: 0;
 	padding: 0;
-	list-style: none;
 	width:5000px;
 	height: 20px;
+	list-style: none;
 }
 .traces .timeline-zoom li {
+	display: inline-block;
 	margin: 0;
 	padding: 0;
-	display: inline-block;
 }
 
 .traces .timeline .slider {
+	position: absolute;
 	width: 700px;
 	height: 18px;
-	position: absolute;
 }
 .traces .ui-slider-handle {
 	position: absolute;
-	border: 3px solid lightblue;
+	margin-top: 2px;
 	width: 100px;
 	height: 10px;
-	margin-top: 2px;
+	border: 3px solid lightblue;
 }
 
 .winners #winner {
@@ -93,19 +97,84 @@ header > div {
 	list-style: none;
 }
 .winners #winner .tours > li {
-	width: 30px;
-	height: 100px;
 	display: inline-block;
-	border: 1px solid #ddd;
+	margin:0 -3px 0 0;
+	width: 28px;
+	font:700 13px 'Lato', Verdana, Arial, sans-serif;
+	height: 126px;
+	border-right: 1px solid #fff;
+	background:#D9D9D4;
+	text-align:center;
+	vertical-align:top;
+	position:relative;
 }
+
+.winners #winner .tours a {
+	border-bottom:1px solid #383C40;
+	color:#383C40;
+	font:700 13px 'Lato', Verdana, Arial, sans-serif;
+	margin: 0;
+	padding:0;
+}
+
+.winners #winner .tours a.pos-1 {
+	border:none;
+	display:block;
+	background:url(/img/vainqueurs/icon-victoire.png) left top no-repeat;
+	display:block;
+	height:22px;
+	margin:0 0 0 3px;
+	overflow:hidden;
+	padding: 0;
+	position: absolute;
+	text-indent: 100%; 
+	width:24px;
+	top:-14px;
+	white-space:nowrap;
+}
+
+.winners #winner .tours > li.empty {
+	visibility:hidden;
+}
+
+.winners #winner .tours .wins {
+	display:block;
+	margin:0;
+	padding: 0; 
+	position: absolute;
+	bottom:28px;
+	width:28px;
+}
+
 .winners #winner .tours .wins div {
-	font-size: 7px;
+	display:block;
+	background:url(/img/vainqueurs/icon-etape.png) left top no-repeat;
+	display:block;
+	height:10px;
+	margin:5px auto 0 auto;
+	overflow:hidden;
+	padding: 0;
+	text-indent: 100%; 
+	width:17px;
+	white-space:nowrap;
 }
+
 .winners #winner .tours .bulle {
 	display: none;
 }
+
 .winners #winner .tours .year {
-	font-size: 10px;
+	border-top: 1px solid #fff;
+	color:#383C40;
+	display:block;
+	font:700 10px/22px 'Lato', Verdana, Arial, sans-serif;
+	height:22px;
+	margin: 0;
+	padding: 0;
+	position: absolute;
+	text-align:center;
+	bottom:0;
+	width:28px;
 }
 
 .winners .legend {
@@ -113,17 +182,70 @@ header > div {
 }
 
 .winners .winners_list {
-	height: 300px;
-	width: 100%;
+	background: #D9D9D4; 
 	overflow: auto;
+	width: 100%;
+	height: 300px;
 }
 .winners .winners_list .winner {
 	display: inline-block;
 	overflow: hidden;
 	width: 150px;
 	height: 200px;
-	border: 1px solid #ddd;
+	margin:0 -3px 0 0;
+	border:1px dashed #fff;
+	border-top:none; 
+	border-right:none;
+	vertical-align:top;
+	text-align:center; 
 }
+
+.winners .winners_list .winner-active {
+	background:url(/img/vainqueurs/bg-winner-selected.png) center top no-repeat;
+}
+
+.winners .winners_list .winner .name {
+	color:#383C40;
+	font:700 15px 'Oswald', Verdana, Arial, sans-serif;
+	text-transform:uppercase;
+}
+
 .winners .winners_list .winner .name span {
 	display: none;
 }
+
+.wins {
+	list-style-type:none;
+	margin:0;
+	padding: 0;
+	text-align:center; 
+}
+
+.wins li {
+	color:#383C40;
+	display:inline-block;
+	font:700 11px 'Lato', Verdana, Arial, sans-serif;
+	margin: 0 4px 0 0;
+	padding: 0;
+}
+
+.wins a {
+	color:#383C40;
+}
+
+#close {
+	border:none;
+	display:block;
+	background:url(/img/icon/bt-close.png) left top no-repeat;
+	display:block;
+	height:22px;
+	margin:0;
+	overflow:hidden;
+	padding: 0;
+	position: absolute;
+	text-indent: 100%; 
+	width:22px;
+	white-space:nowrap;	
+}
+
+
