--- a/web/src/scss/styles.scss
+++ b/web/src/scss/styles.scss
@@ -150,7 +150,7 @@ header > div {
 	margin:-11px 0 0 3px;
 	overflow:hidden;
 	padding: 0;
-	text-indent: 100%; 
+	text-indent: 100%;
 	left:0;
 	width:24px;
 	white-space:nowrap;
@@ -168,7 +168,7 @@ header > div {
 .winners #winner .tours .wins {
 	display:block;
 	margin:0;
-	padding: 0; 
+	padding: 0;
 	position: absolute;
 	bottom:28px;
 	width:28px;
@@ -182,7 +182,7 @@ header > div {
 	margin:5px auto 0 auto;
 	overflow:hidden;
 	padding: 0;
-	text-indent: 100%; 
+	text-indent: 100%;
 	width:17px;
 	white-space:nowrap;
 }
@@ -234,9 +234,9 @@ header > div {
 	overflow:hidden;
 	padding: 0;
 	position: absolute;
-	text-indent: 100%; 
+	text-indent: 100%;
 	width:137px;
-	white-space:nowrap;	
+	white-space:nowrap;
 }
 
 .legend li {
@@ -270,7 +270,7 @@ header > div {
 }
 
 .winners .winners_list {
-	background: #D9D9D4; 
+	background: #D9D9D4;
 	overflow: auto;
 	width: 100%;
 	height: 300px;
@@ -282,10 +282,10 @@ header > div {
 	height: 200px;
 	margin:0 -3px 0 0;
 	border:1px dashed #fff;
-	border-top:none; 
+	border-top:none;
 	border-right:none;
 	vertical-align:top;
-	text-align:center; 
+	text-align:center;
 }
 
 .winners .winners_list .winner-active {
@@ -307,7 +307,7 @@ header > div {
 	list-style-type:none;
 	margin:0;
 	padding: 0;
-	text-align:center; 
+	text-align:center;
 }
 
 .wins li {
@@ -332,9 +332,14 @@ header > div {
 	overflow:hidden;
 	padding: 0;
 	position: absolute;
-	text-indent: 100%; 
+	text-indent: 100%;
 	width:22px;
-	white-space:nowrap;	
+	white-space:nowrap;
+}
+
+.winners .ui-slider {
+	position: relative;
+	text-align: left;
 }
 
 .winners .ui-slider-handle {
@@ -345,3 +350,40 @@ header > div {
 	margin-top: 2px;
 }
 
+.winners .ui-slider-horizontal .ui-slider-range {
+	top: 0;
+	height: 100%;
+}
+
+.winners .ui-slider-horizontal .ui-slider-range {
+	top: 0;
+	height: 100%;
+}
+
+.winners .ui-slider-horizontal .ui-slider-handle {
+	top: -.3em;
+	margin-left: -.6em;
+}
+
+.winners .ui-slider .ui-slider-handle {
+	position: absolute;
+	z-index: 2;
+	width: 1.2em;
+	height: 1.2em;
+	cursor: default;
+}
+
+.winners .ui-slider .ui-slider-range {
+	position: absolute;
+	z-index: 1;
+	font-size: .7em;
+	display: block;
+	border: 0;
+	background-position: 0 0;
+}
+
+.winners .age .slider {
+	width: 200px;
+	border: 1px solid red;
+	height: 15px;
+}
