filter : ages & nb wins

--- a/web/src/scss/styles.scss
+++ b/web/src/scss/styles.scss
@@ -502,7 +502,7 @@ header > div {
 	background-position: 0 0;
 }
 
-.winners .age .slider {
+.winners .age .slider, .winners .nb_wins .slider {
 	width: 200px;
 	border: 1px solid red;
 	height: 15px;
