--- a/web/src/scss/styles.scss
+++ b/web/src/scss/styles.scss
@@ -37,8 +37,106 @@ a {
 	display: none;
 }
 
-header > div {
-	display: inline;
+/* HEADER */
+
+#inner header {
+	background:url(/img/bg-header.png) left top repeat-x;
+	height:73px;
+	overflow:hidden;
+}
+
+header section {
+	float:left;
+	text-align:right;
+	width:595px;
+}
+
+header div { 
+	display:inline-block;
+	margin:0 -3px 0 0;
+	overflow:hidden;
+	padding:0;
+	width:80px;
+}
+
+header a {
+	border-left:1px solid #fff;
+	color:#EEF1F4;
+	display:table-cell;
+	font:400 10px/1.3 'Lato', Verdana, Arial, sans-serif;
+	height:68px;
+	margin:0;
+	padding:0 10px 5px 10px;
+	vertical-align:bottom;
+	text-align:center;
+	text-transform:uppercase;
+	width:60px;
+}
+
+header h1 {
+	background:url(/img/header/logo.png) left top no-repeat;
+	display:block;
+	float:left;
+	height:72px;
+	margin:1px 46px 0 7px;
+	overflow:hidden;
+	padding:0;
+	text-indent:100%;
+	white-space:nowrap;
+	width:352px;
+}
+
+header h1 a {
+	border:none;
+}
+
+header .traces a {
+	background:url(/img/header/bg-traces-off.png) 50% 5px no-repeat;
+}
+
+header .traces.active a {
+	background:url(/img/header/bg-traces-on.png) 20px 13px no-repeat;
+	color:#58BDDB;
+}
+
+header .winners a {
+	background:url(/img/header/bg-vainqueurs-off.png) 50% 13px no-repeat;
+}
+
+header .active {
+	width:354px;
+}
+
+header .active a {
+	font-size:24px;
+	line-height:2.4;
+	text-indent:74px;
+	white-space:nowrap;
+	width:auto;
+}
+
+header .winners.active a {
+	background:url(/img/header/bg-vainqueurs-on.png) 20px 13px no-repeat;
+	color:#FFD800;
+}
+
+header .streetview a {
+	background:url(/img/header/bg-lieux-off.png) 50% 5px no-repeat;
+}
+
+header .streetview.active a {
+	background:url(/img/header/bg-lieux-on.png) 20px 13px no-repeat;
+	color:#92C407;
+}
+
+header .fight a {
+	background:url(/img/header/bg-duels-off.png) 50% 5px no-repeat;
+}
+
+header .fight.active a {
+	background:url(/img/header/bg-duels-on.png) 20px 13px no-repeat;
+	color:#FF972B;
+	line-height:3.8;
 }
 
 .content .left {
