--- a/web/src/scss/styles.scss
+++ b/web/src/scss/styles.scss
@@ -5,6 +5,8 @@ body {
 	color:#383C40;
 }
 
+.visuallyhidden { border: 0; clip: rect(0 0 0 0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px; }
+
 a {
 	text-decoration:none;
 }
