--- a/web/src/scss/styles.scss
+++ b/web/src/scss/styles.scss
@@ -40,7 +40,7 @@ a {
 /* HEADER */
 
 #inner header {
-	background:url(/img/bg-header.png) left top repeat-x;
+	background:url(/img/header/bg-header.png) left top repeat-x;
 	height:73px;
 	overflow:hidden;
 }
@@ -625,7 +625,7 @@ header .fight.active a {
 	background:#996D00;
 	border-radius:8px;
 	height: 9px;
-	width: 200px;	
+	width: 200px;
 }
 
 .filters-block {
@@ -687,7 +687,7 @@ header .fight.active a {
 	width:100%;
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
-	-moz-box-sizing: border-box;	
+	-moz-box-sizing: border-box;
 }
 
 #traces-years.single:before, #traces-years.single:after {
@@ -799,7 +799,7 @@ header .fight.active a {
 	width:48px;
 }
 
-.traces-left-stats .max { 
+.traces-left-stats .max {
 	left:auto;
 	right:0;
 }
@@ -813,7 +813,7 @@ header .fight.active a {
 .winner-status {
 	color:#383C40;
 	display:inline-block;
-	font:400 15px/1.1 'Oswald', Verdana, Arial, sans-serif;	
+	font:400 15px/1.1 'Oswald', Verdana, Arial, sans-serif;
 	margin:0;
 	padding:0;
 	text-align:center;
@@ -837,7 +837,7 @@ header .fight.active a {
 .traces-right .name {
 	color:#383C40;
 	display:block;
-	font:700 23px/1.1 'Oswald', Verdana, Arial, sans-serif;	
+	font:700 23px/1.1 'Oswald', Verdana, Arial, sans-serif;
 	margin:0;
 	padding:0;
 	white-space:nowrap;
@@ -847,9 +847,9 @@ header .fight.active a {
 	background:url(/img/traces/traces_vainqueur_more_off.png) 100% 0 no-repeat;
 	color:#383C40;
 	display:block;
-	font:700 23px/1.1 'Oswald', Verdana, Arial, sans-serif;	
+	font:700 23px/1.1 'Oswald', Verdana, Arial, sans-serif;
 	margin:0;
-	padding:0 50px 0 0;	
+	padding:0 50px 0 0;
 }
 
 .traces-right .name a:hover {
