--- a/web/src/scss/styles.scss
+++ b/web/src/scss/styles.scss
@@ -1151,7 +1151,7 @@ footer {
 	margin:0;
 	font:400 9px/1.3 'Lato', Verdana, Arial, sans-serif;
 	margin:0;
-	padding:0 4px;>
+	padding:0 4px;
 	text-transform:uppercase;
 }
 
