add streetview thumbnails / add places scroll

--- a/web/src/scss/styles.scss
+++ b/web/src/scss/styles.scss
@@ -1065,6 +1065,10 @@ header .fight.active a {
 	width:258px;
 	float: left;
 }
+.streetview-left .list ul {
+	height: 450px;
+	overflow: auto;
+}
 .streetview-left .detail {
 	width:258px;
 	float: left;
