--- a/web/src/scss/styles.scss
+++ b/web/src/scss/styles.scss
@@ -191,8 +191,7 @@ header .fight.active a {
 }
 
 .traces .timeline-zoom {
-	overflow-x: scroll;
-	overflow-y: hidden;
+	overflow: hidden;
 	margin: 0;
 	padding: 0;
 	width: 900px;
