--- a/web/src/scss/styles.scss
+++ b/web/src/scss/styles.scss
@@ -1082,6 +1082,43 @@ header .fight.active a {
 	width:742px;
 }
 
+.streetview-list {
+	margin:0;
+	padding:0 8px;
+}
+
+.streetview-list li {
+	border-bottom:1px dotted #dedede;
+	clear:both;
+	display:block;
+	margin:5px 0;
+	padding:3px 0;
+	zoom:1;
+}
+
+.streetview-list li:last-child {
+	border:none;
+}
+
+.streetview-list li:before, .streetview-list li:after { content:""; display:table; }
+.streetview-list li:after { clear:both; }
+
+.streetview-list img {
+	border:4px solid #fff;
+	display:block;
+	float:left;
+	margin:0 10px 5px 0;
+	padding:0;
+	-moz-box-shadow: 1px 1px 3px 3px rgba(0, 0, 0, 0.2);
+	-webkit-box-shadow: 1px 1px 3px 3px rgba(0, 0, 0, 0.2);
+	box-shadow: 1px 1px 3px 3px rgba(0, 0, 0, 0.2);	
+}
+
+.streetview-list a {
+	color:#383C40;
+	font:normal 14px/1.3 'Lato', Arial, sans-serif;
+}
+
 /* SELECTBOX */
 
 .sbHolder {
