--- a/map/css/map.css
+++ b/map/css/map.css
@@ -18,12 +18,40 @@ body {
 	height: 100%;
 }
 
-
-#mapPreview{ 
-	height: 90%;
-	width: 100%;
+#container {
+    width:100%;
+    height: 90%;
+    position: relative;
 }
 
+
+#mapPreview, 
+#panoramaPreview {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width:100%;
+    height:100%;
+}
+
+#mapPreview{ 
+    z-index: 10;
+    
+}
+
+#mapPreview.bigmap{
+    width:100%;
+    height:100%;
+}
+
+#mapPreview.minimap{
+    left: auto;
+    top: auto;
+    bottom: 0 !important;
+    right: 0 !important;
+    width:250px;
+        height:250px;
+}
 
 #gmapInputAddress{
     width: 300px;
@@ -35,3 +63,10 @@ body {
     display: none;
     
 }
+
+
+
+
+
+
+
