--- a/web/src/scss/styles.scss
+++ b/web/src/scss/styles.scss
@@ -151,8 +151,7 @@ header .fight.active a {
 	width: 250px;
 }
 
-.content .map-container {
-	
+.content .map-container {	
 	float: left;
 	display:block;
 	position:relative;
@@ -160,7 +159,13 @@ header .fight.active a {
 	height:422px;
 }
 
-.content .map-container #gmap-traces{
+.content .map-container-full{
+    display:block;
+    width: 100%;
+    height:489px;
+}
+
+#gmap-traces, #gmap-search{
     width: 100%;
     height: 100%;
 }
