--- a/web/src/scss/_home.scss
+++ b/web/src/scss/_home.scss
@@ -72,7 +72,7 @@
 	display:block;
 	float:left;
 	font:400 14px/2 'Lato', Verdana, Arial, sans-serif;
-	height:28px
+	height:28px;
 	margin:0;
 	padding:0;
 	width:200px;
