Ajout images manquantes

--- a/web/src/scss/_winners.scss
+++ b/web/src/scss/_winners.scss
@@ -294,6 +294,14 @@
 	margin:0 0 0 -4px;
 }
 
+.ui-slider-handle span {
+	color:#633B00;
+	display:block;
+	font:400 14px 'Lato', Verdana, Arial, sans-serif;
+	margin:0;
+	padding:20px 0 0 0;
+}
+
 .top-winner-portrait {
 	display:block;
 	margin:0;
