--- a/web/src/scss/_selectbox.scss
+++ b/web/src/scss/_selectbox.scss
@@ -57,8 +57,8 @@
 	padding: 0;
 	position: absolute;
 	top: 29px;
-	width: 221px;
-	height:70px;
+	width: 100%;
+	height:240px;
 	overflow:auto;
 	z-index: 1;
 }
