--- a/web/src/scss/_fights.scss
+++ b/web/src/scss/_fights.scss
@@ -1,8 +1,8 @@
 
 .fight-start {
-	width: 800px;
-	height: 600px;
-	border: 1px solid red;
+	// width: 800px;
+	// height: 600px;
+	// border: 1px solid red;
 }
 
 .fight-start .fighters {
