add map streetview

--- a/web/src/scss/styles.scss
+++ b/web/src/scss/styles.scss
@@ -60,7 +60,7 @@ a {
     height:489px;
 }
 
-#gmap-traces, #gmap-search{
+#gmap-traces, #gmap-search, #gmap-streetview{
     width: 100%;
     height: 100%;
 }
